# wreq-ruby

./: .gitignore  CLAUDE.md  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  build.rs  extconf.rb  wreq-0.1.0.gem  wreq.gemspec
.github/workflows/: ci.yml  release.yml
examples/: body.rb  client.rb  emulation_request.rb  headers.rb  proxy.rb  send_stream.rb  stream.rb  stream_body.rb  thread_interrupt.rb  upload_stream.rb
lib/: wreq.rb
lib/wreq_ruby/: body.rb  channel.rb  client.rb  cookie.rb  emulate.rb  emulation.rb  error.rb  header.rb  http.rb  response.rb  streamer.rb  upload_stream.rb  version.rb
script/: build_platform_gem.rb
sig/: wreq.rbs
src/: client.rs  cookie.rs  emulate.rs  emulation.rs  error.rs  extractor.rs  gvl.rs  header.rs  http.rs  lib.rs  macros.rs  nogvl.rs  rt.rs
src/client/: body.rs  param.rs  req.rs  resp.rs
src/client/body/: json.rs  stream.rs
test/: client_cookie_test.rb  client_test.rb  cookie_test.rb  emulate_test.rb  emulation_test.rb  error_handling_test.rb  header_test.rb  http_test.rb  interrupt_test.rb  module_methods_test.rb  request_parameters_test.rb  request_test.rb  response_test.rb  stream_test.rb  test_helper.rb
test/results/: chrome_147.json
