[package]
name = "wreq-ruby"
description = "Ruby bindings for Wreq, HTTP client library in Rust."
authors = ["SearchApi <support@searchapi.io>"]
homepage = "https://github.com/SearchApi"
repository = "https://github.com/SearchApi/wreq-ruby"
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
doc = false
name = "wreq_ruby"

[dependencies]
magnus = { version = "0.8", features = ["bytes", "io"] }
rb-sys = { version = "0.9.110", default-features = false }
tokio = { version = "1", features = ["full"] }
wreq = { version = "6.0.0-rc.21", features = [
    "json",
    "socks",
    "stream",
    "multipart",
    "cookies",
    "charset",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
] }
wreq-util = { version = "3.0.0-rc.7", features = ["emulation-rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_magnus = "0.10.0"


[build-dependencies]
rb-sys-env = "0.1.2"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true