[package]
name = "wreq-ruby"
description = "Ruby bindings for Wreq, HTTP client library in Rust."
authors = ["SearchApi <support@searchapi.io>"]
homepage = "https://github.com/SearchApi"
repository = "https://github.com/SearchApi/wreq-ruby"
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
doc = false
name = "wreq_ruby"

[dependencies]
magnus = { version = "0.8", features = ["bytes", "io"] }
rb-sys = { version = "0.9.110", default-features = false }
tokio = { version = "1", features = ["full"] }
wreq = { version = "6.0.0-rc.21", features = [
    "json",
    "socks",
    "stream",
    "multipart",
    "cookies",
    "charset",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
] }
wreq-util = { version = "3.0.0-rc.7", features = ["emulation-rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_magnus = "0.10.0"
indexmap = { version = "2.10.0", features = ["serde"] }
bytes = "1.10.1"
arc-swap = "1.7.0"
http = "1"
http-body-util = "0.1.3"
futures-util = { version = "0.3.31", default-features = false }

[build-dependencies]
rb-sys-env = "0.1.2"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true